--- a/style.css
+++ b/style.css
@@ -1,33 +1,47 @@
 
-.navigation{
-    color: grey;
-    font-family: 'Mochiy Pop P One', sans-serif;
-    text-align: center;
-}
-
-
-
-.entry {
+:root {
+    --primary-dark: #1f2937;
+    --primary-green: #F87171;
+  }
+  body{
+    background-color: var(--primary-dark);
+    color: var(--primary-green)
+  }
+  
+  .container{
+    
+    margin: auto;
+    width: 50%;
+    
+   }
+  .heading {
+  margin: 2rem;
+  text-align: center;
+  font-family: 'Mochiy Pop P One', sans-serif;
+  
+  
+  
+  }
+  
+  input,label{
     display: block;
-    padding: 1rem;
-}
-
-#section-top-right {
-    width: 650px;
-    margin: 50px auto
-    font-weight: bold;
-    border: 2px solid grey;
-    padding: 1rem
-
-}
-
-#section-bottom {
-    border: 2px solid grey;
-    padding: 2rem;
-}
-
-#section-top-left {
-    max-width: 350px;
+  }
+  
+  input{
+    margin-bottom: 1rem;
+    width: 100%;
+  
+  } 
+  
+  #check-button {
     display: block;
-    text-align: right;
-}
+    margin: auto;
+    margin-top: 1rem;
+    background: transparent;
+    color: var(--primary-green);
+    border-color: var(--primary-green);
+    border-width: medium;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+  
+  }  
